--- a/Ling.tex
+++ b/Ling.tex
@@ -1,10 +1,10 @@
 \section{Ling Αθροιστές}
 \label{section:Ling}
 Στα προηγούμενα κεφάλαια παρουσιάστηκαν διάφοροι δυαδικοί αθροιστές , 
-ανάμεσα σε αυτούς και ο αθροιστής πρόβλεψης κρατουμένου. Επειτα γνωστοποιήθηκαν 
-διάφοροι τρόποι υπολογισμού των κρατουμένων για την υλοποίηση του CLA. Όπως, λοιπον,
-έχει αποδειχθεί, οι δομές CLA είναι ιδανικές για την ελάττωση της καθυστέρησης υπολογισμού
-του αποτελέσματος. Παρ' όλ' αυτά στο παρόν κεφάλαιο θα παρουσιαστεί μια βελτίωση που προτάθηκε 
+ανάμεσα σε αυτούς και ο αθροιστής πρόβλεψης κρατουμένου. Έπειτα γνωστοποιήθηκαν 
+διάφοροι τρόποι υπολογισμού των κρατουμένων για την υλοποίηση του CLA. Όπως
+έχει αποδειχθεί οι δομές CLA είναι ιδανικές για την ελάττωση της καθυστέρησης υπολογισμού
+του αποτελέσματος. Ωστόσο στο παρόν κεφάλαιο θα παρουσιαστεί μια βελτίωση που προτάθηκε 
 από τον Ling \cite{5390638} .
 
 
@@ -22,7 +22,7 @@
 \end{equation*}
 
 Η βασική βελτιστοποίηση που επέφερε η θεωρία του Ling είναι η παρακάτω τροποποίηση 
-της συνάρτησης υπολογισμού του σήματος Group Carry Generate του συνόλου $i$ εως $j$ με $i > j$
+της συνάρτησης υπολογισμού του σήματος Group Carry Generate του συνόλου $i$ έως $j$ με $i > j$
 \begin{equation}
 \begin{split}
     G_{i:j} &= g_i + p_ig_{i-1} + p_ip_{i-1}g_{i-2} + ... + p_ip_{i-1}p_{i-1}...p_{j+1}p_j\\
@@ -40,8 +40,7 @@
 \begin{equation}
     G_{i:j} = p_i * H_{i:j}
 \end{equation}
-Σημαντικό, επίσης, της παραγοντοποίησης αυτής είναι πως υποστηρίζεται ο τελεστής $\circledast$
-και η αναγωγή της σε πρόβλημα προθέματος. Έχοντας το σύνολο $i$ εως $j$ με $i>k>j$ αποδεικνύεται πως
+Η υποστήριξη του τελεστή $\circledast$ καθώς και η αναγωγή σε πρόβλημα προθέματος αποτελεί μεγάλο πλεονέκτημα της παραγοντοποίησης αυτής. Έχοντας το σύνολο $i$ έως $j$ με $i>k>j$ αποδεικνύεται πως
 \begin{equation}
 \begin{split}
     G_{i:j} &= G_{i:k} + P_{i:k}*G_{k-1:j}\\
@@ -90,9 +89,9 @@
 \subsection{Πλεονεκτήματα της Ling παραγοντοποίησης}
 Ένας αθροιστής Ling βελτιστοποιεί την επίδοση του CLA μειώνοντας κατά ένα το πλήθος 
 εισόδων των λογικών πυλών (fan-in). Όμως αφαιρώντας από κάθε όρο του Group Generate 
-σήματος ενα propagate έχει ως αποτέλεσμα να αυξάνεται η πολυπλοκότητα του τελευταίου 
+σήματος ένα propagate έχει ως αποτέλεσμα να αυξάνεται η πολυπλοκότητα του τελευταίου 
 σταδίου όπου υπολογίζεται το άθροισμα. 
-Παρατηρείται στην εξίσωση \ref{eq:ling_sum_1} πως πρέπει να υπολογιστεί το $H$ 
+Παρατηρείται στην εξίσωση \ref{eq:ling_sum_1} πως πρέπει να υπολογιστεί το $H$, 
 στην συνέχεια να πραγματοποιηθεί η λογική του πράξη AND με το σήμα $p_i$ και τέλος
 η έξοδος της πύλης AND να οδηγήσει την είσοδο της πύλης XOR σε συνδυασμό με το
 σήμα $x_i$, όπως φαίνεται στην εικόνα \ref{fig:Ling_sum_1}.
@@ -132,7 +131,7 @@
 Στην τροποποίηση που εκφράζεται στην εξίσωση \ref{eq:ling_sum_2} και 
 απεικονίζεται στην εικόνα \ref{fig:Ling_sum_2} με μία πρώτη ματιά φαίνεται να 
 υπάρχει αρνητική απόδοση σε σχέση με την αρχική και πιο απλή υλοποίηση.
-Στην πραγματικότητα όμως η απόδοση αφορά την καθυστέρησή και όχι το εμβαδόν. Το σήμα
+Στην πραγματικότητα όμως η απόδοση αφορά την καθυστέρηση και όχι το εμβαδόν. Το σήμα
 $Η$ είναι αυτό που υπολογίζεται τελευταίο χρονικά και στην πρώτη αρχιτεκτονική
 είναι στο κρίσιμο μονοπάτι. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
 έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H.
