--- a/Results.tex
+++ b/Results.tex
@@ -16,7 +16,7 @@
 Η λογική σύνθεση είναι μια υπό-διαδικασία του ηλεκτρονικού αυτόματου σχεδιασμού,
 κατά την οποία η αφηρημένη περιγραφή του ψηφιακού συστήματος 
 μετατρέπεται σε κύκλωμα λογικών πυλών. Λογισμικά υπεύθυνα για αυτή την διαδικασία
-ονομάζονται εργαλεία σύνθεσις ( Synthesis tools ) και είτε παράγουν bitstreams για FPGAs
+ονομάζονται εργαλεία σύνθεσης ( Synthesis tools ) και είτε παράγουν bitstreams για FPGAs
 είτε τα απαραίτητα αρχεία για την δημιουργία ASICs. Σε κάθε περίπτωση παράγουν
 επίσης κάποιες εκτιμήσεις σχετικά με την ταχύτητα, αξιοποίηση πόρων, κατανάλωση ενέργειας
 και άλλα.
@@ -40,7 +40,7 @@
 Για την σύνθεση των αθροιστών έγινε χρήση της βιβλιοθήκης "Digital Standard Cell Library" 
 των 32nm της Synopsys. Στην βιβλιοθήκη αυτή υλοποιούνται βασικές πύλες όπως AND, NAND, 
 OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσεις όπως AND-OR, OR-AND, πολυπλέκτες 
-δυο σε ένα, αποκωδικοποιητές, ήμι-αθροιστές και πλήρη αθροιστές και πολλά άλλα στοιχεία.
+δυο σε ένα, αποκωδικοποιητές, HA, FA και πολλά άλλα στοιχεία.
 Για κάθε ένα λογικό κελί που περιέχει η βιβλιοθήκη δίνεται μια αναλυτική αναφορά
 για τους χρόνους καθυστέρησης και την κατανάλωση ενέργειας ανάλογα με την συμπεριφορά της εισόδου,
 το εμβαδόν που καταλαμβάνει το λογικό κύκλωμά, καθώς και άλλες πληροφορίες που αφορούν την 
@@ -81,7 +81,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \clearpage
 \subsection{Μετρήσεις}
-Στην παράγραφο αυτή καταγράφονται τα αποτελέσματα των, τοπογραφικών και μη, μετρήσεων των αθροιστών σε μορφή πινάκων. Σημειώνεται πως για τις μετρήσεις δεν δόθηκε κανένας περιορισμός στο εργαλείο σύνθεσης (Παράρτημα \ref{appendix:scripts}). Οι μονάδες μέτρησης καθυστέρησης, εμβαδού και κατανάλωση ενέργειας είναι $ns$, $nm^2$ και $pw$ αντίστοιχα.
+Στην παράγραφο αυτή καταγράφονται τα αποτελέσματα, τοπογραφικών και μη, μετρήσεων των αθροιστών σε μορφή πινάκων. Σημειώνεται πως για τις μετρήσεις δεν δόθηκε κανένας περιορισμός στο εργαλείο σύνθεσης (Παράρτημα \ref{appendix:scripts}). Οι μονάδες μέτρησης καθυστέρησης, εμβαδού και κατανάλωση ενέργειας είναι $ns$, $nm^2$ και $pw$ αντίστοιχα.
 \begin{multicols}{2}
 [\subsubsection{Μη-Τοπογραφικές Μετρήσεις}]
 %------------------------------------------------------------------------------
@@ -918,10 +918,10 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \clearpage
 \subsection{Ανάλυση αποτελεσμάτων}
-Τα αποτελέσματα των μετρήσεων, όπως ήταν και αναμενόμενο, διαφέρουν ανάλογα με τον τρόπο μεταγλώττισης (τοπογραφικό και μη). Στην συνέχεια σχολιάζονται και οι δύο περιπτώσεις όσο αφορά την απόδοση. 
+Τα αποτελέσματα των μετρήσεων, όπως ήταν και αναμενόμενο, διαφέρουν ανάλογα με τον τρόπο μεταγλώττισης (τοπογραφικό και μη). Στην συνέχεια σχολιάζονται και οι δύο περιπτώσεις όσον αφορά την απόδοση. 
 
 \subsubsection{Σχολιασμός μη-τοπογραφικών αποτελεσμάτων}
-Σύμφωνα με τα αποτελέσματα των μη-τοπογραφικών μετρήσεων, παρατηρείται θετική απόδοση της ταχύτητας σε όλες τις περιπτώσεις. Η αναμενόμενη κατάταξή, όσο αφορά την ταχύτητα, ξεκινά με μεγαλύτερη καθυστέρηση στις απλές τοπολογίες προθεματικών αθροιστών υπολοίπου, και καταλήγει στις τοπολογίες κατά Jackson. Σε παρελθοντικές έρευνες \cite{1377160} και \cite{4633502} έχει αποδειχθεί πως οι αθροιστές υπολοίπου $2^n-1$ κατά ling είναι πιο αποδοτικοί από τους simple-prefix. Στα αποτελέσματα, όπως φαίνεται και στο γράφημα της εικόνας \ref{graph:non-topo}, υπάρχουν περιπτώσεις όπου οι Ling αθροιστές είναι στην χειρότερη περίπτωση.
+Σύμφωνα με τα αποτελέσματα των μη-τοπογραφικών μετρήσεων, παρατηρείται θετική απόδοση της ταχύτητας σε όλες τις περιπτώσεις. Η αναμενόμενη κατάταξη, όσον αφορά την ταχύτητα, ξεκινά με μεγαλύτερη καθυστέρηση στις απλές τοπολογίες προθεματικών αθροιστών υπολοίπου, και καταλήγει στις τοπολογίες κατά Jackson. Σε παρελθοντικές έρευνες \cite{1377160} και \cite{4633502} έχει αποδειχθεί πως οι αθροιστές υπολοίπου $2^n-1$ κατά ling είναι πιο αποδοτικοί από τους simple-prefix. Στα αποτελέσματα, όπως φαίνεται και στο γράφημα της εικόνας \ref{graph:non-topo}, υπάρχουν περιπτώσεις όπου οι Ling αθροιστές είναι στην χειρότερη περίπτωση.
 
 \begin{figure}[H]
 \begin{center}
@@ -930,7 +930,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \begin{axis}[
     title={Γράφημα καθυστέρησης},
     xlabel={Μήκος εισόδου (bits)},
-    ylabel={Χρονικά καθηστέρηση (ns)},
+    ylabel={Χρονική καθυστέρηση (ns)},
     xmin=0, xmax=70,
     ymin=30, ymax=70,
     xtick={8,16,32,64},
@@ -980,9 +980,9 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 Αυτό δεν σημαίνει πως οι μετρήσεις είναι άκυρες. Ο βασικός λόγος που προκαλεί την διαφορά αυτή είναι η επιλογή της βιβλιοθήκης. Οι μετρήσεις της παρούσας εργασίας πραγματοποιήθηκαν σε τεχνολογία 32nm, ενώ οι μετρήσεις που παρουσιάζονται σε προηγούμενες δημοσιεύσεις συγκρίνοντας τους προθεματικούς αθροιστές με αθροιστές Ling βασίζονται σε τεχνολογίες μεγαλύτερες των 100nm. 
 
-Όσο αφορά την επιτάχυνση των αθροιστών, όπου είναι και ο στόχος της παρούσας εργασίας, είναι εμφανές και από το διάγραμμα αλλά και από τους πίνακες των αποτελεσμάτων πως υπάρχει αισθητό προβάδισμα. Πρέπει όμως να σημειωθεί πως όσο αφορά την απαίτηση πόρων και ενέργειας τα αποτελέσματα είναι αρνητικά, κάτι που είναι επίσης αναμενόμενο εφόσον για την υλοποίηση της παραγοντοποίησης Jackson είναι αναγκαίο να εισαχθούν στο σχεδιασμό επιπλέον κόμβοι για τον υπολογισμό των σημάτων D.
+Όσον αφορά την επιτάχυνση των αθροιστών, όπου είναι και ο στόχος της παρούσας εργασίας, είναι εμφανές και από το διάγραμμα αλλά και από τους πίνακες των αποτελεσμάτων πως υπάρχει αισθητό προβάδισμα. Πρέπει όμως να σημειωθεί πως όσον αφορά την απαίτηση πόρων και ενέργειας τα αποτελέσματα είναι αρνητικά, κάτι που είναι επίσης αναμενόμενο εφόσον για την υλοποίηση της παραγοντοποίησης Jackson είναι αναγκαίο να εισαχθούν στο σχεδιασμό επιπλέον κόμβοι για τον υπολογισμό των σημάτων D.
 
-Στις παραπάνω τρεις αρχιτεκτονικές προς σύγκριση, εφαρμόστηκε η ίδια ακριβός τεχνική αραίωσης, sparse-2 και sparse-4, με σκοπό την μείωση του εμβαδού. Στα γραφήματα \ref{graph:non-topo-sparse-2} και \ref{graph:non-topo-sparse-4} παρουσιάζονται τα διαγράμματα καθυστέρησης - μήκος εισόδου για sparse-2 και sparse-4 αντίστοιχα.
+Στις παραπάνω τρεις αρχιτεκτονικές προς σύγκριση, εφαρμόστηκε η ίδια ακριβώς τεχνική αραίωσης, sparse-2 και sparse-4, με σκοπό την μείωση του εμβαδού. Στα γραφήματα \ref{graph:non-topo-sparse-2} και \ref{graph:non-topo-sparse-4} παρουσιάζονται τα διαγράμματα καθυστέρησης - μήκος εισόδου για sparse-2 και sparse-4 αντίστοιχα.
 
 \begin{figure}[H]
 \begin{center}
@@ -991,7 +991,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \begin{axis}[
     title={Γράφημα καθυστέρησης, sparse-2},
     xlabel={Μήκος εισόδου (bits)},
-    % ylabel={Χρονικά καθηστέρηση (ns)},
+    ylabel={Χρονική καθυστέρηση (ns)},
     xmin=0, xmax=70,
     ymin=40, ymax=80,
     xtick={8,16,32,64},
@@ -1037,7 +1037,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \label{graph:non-topo-sparse-2}
 \end{figure}
 
-Η κατάταξη ταχύτητας δεν επηρεάζεται, αλλά κάθε αθροιστής επιβαρύνεται με ένα χρονικό διάστημα κερδίζοντας σε εμβαδόν. Αξιοσημείωτο είναι το αποτέλεσμα στην περίπτωση sparse-4, όπου οι αθροιστές παρουσιάζουν μεγαλύτερες διαφορές, όσο αφορά τον χρόνο, σε σχέση με τις δύο προηγούμενες περιπτώσεις, ενώ το εμβαδόν τους δεν έχει την αντίστοιχη απόκλιση.
+Η κατάταξη ταχύτητας δεν επηρεάζεται, αλλά κάθε αθροιστής επιβαρύνεται με ένα χρονικό διάστημα κερδίζοντας σε εμβαδόν. Αξιοσημείωτο είναι το αποτέλεσμα στην περίπτωση sparse-4, όπου οι αθροιστές παρουσιάζουν μεγαλύτερες διαφορές, όσον αφορά τον χρόνο, σε σχέση με τις δύο προηγούμενες περιπτώσεις, ενώ το εμβαδόν τους δεν έχει την αντίστοιχη απόκλιση.
 
 \begin{figure}[H]
 
@@ -1048,7 +1048,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \begin{axis}[
     title={Γράφημα καθυστέρησης, sparse-4},
     xlabel={Μήκος εισόδου (bits)},
-    ylabel={Χρονικά καθηστέρηση (ns)},
+    ylabel={Χρονική καθυστέρηση (ns)},
     xmin=0, xmax=70,
     ymin=40, ymax=90,
     xtick={8,16,32,64},
@@ -1099,7 +1099,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 \subsubsection{Σχολιασμός τοπογραφικών αποτελεσμάτων}
-Στην περίπτωση των τοπογραφικών μετρήσεων τα αποτελέσματα είναι αρνητικά κατά μέσο όρο με ελάχιστες εξαιρέσεις. Συγκεκριμένα στις sparse-2 και sparse-4 τεχνικές αραίωσης, στους αθροιστές των 32 και 64 δυαδικών ψηφίων παρατηρείται θετική απόδοση όσο αφορά την καθυστέρηση. Στις υπόλοιπες περιπτώσεις τα αποτελέσματα είναι αρνητικά και σε μερικές μη αναμενόμενα, διακρίνοντας ανάποδη χρονική κατάταξη. 
+Στην περίπτωση των τοπογραφικών μετρήσεων τα αποτελέσματα είναι αρνητικά κατά μέσο όρο με ελάχιστες εξαιρέσεις. Συγκεκριμένα στις sparse-2 και sparse-4 τεχνικές αραίωσης, στους αθροιστές των 32 και 64 δυαδικών ψηφίων παρατηρείται θετική απόδοση όσον αφορά την καθυστέρηση. Στις υπόλοιπες περιπτώσεις τα αποτελέσματα είναι αρνητικά και σε μερικές μη αναμενόμενα, διακρίνοντας ανάποδη χρονική κατάταξη. 
 
 Η προφανής εξήγηση των ανομοιόμορφων αποτελεσμάτων μεταξύ τοπογραφικών και μη μετρήσεων οφείλεται στην τεχνολογία που χρησιμοποιήθηκε. Σύμφωνα με έρευνες που πραγματοποιήθηκαν στο παρελθόν \cite{electronics6040078}, καθώς και στην δημοσίευση του Saraswat και Mohammadi \cite{1051729}, διατυπώνεται πως στις προχωρημένες τεχνολογίες η καθυστέρηση λόγω των διασυνδέσεων έχει γίνει αρκετά σημαντικότερη από τις καθυστερήσεις των λογικών πυλών. Στην εικόνα \ref{graph:gap_between_interconection_and_gates_delay} δίνεται ένα γράφημα που δείχνει την διαφορά αυτή χρησιμοποιώντας τα στοιχεία από τις έρευνες που αναφέρθηκαν.
 
@@ -1111,7 +1111,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
     width=9cm,
     title={Γράφημα καθυστέρησης πυλών και διασυνδέσεων},
     xlabel={Τεχνολογία (nm)},
-    ylabel={Χρονική καθηστέρηση (ps)},
+    ylabel={Χρονική καθυστέρηση (ps)},
     ymin=0, ymax=45,
     xtick={650,500,350,250,180,100},
     ytick={0,5,10,15,20,25,30,35,40,45},
@@ -1152,12 +1152,12 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \end{figure}
 
 
-Στους αθροιστές Jackson σημειώνεται αρκετά μεγαλύτερο πλήθος κόμβων σε σχέση με τους υπόλοιπους δύο σχεδιασμούς. Συνεπάγεται, λοιπόν, πως και το πλήθος των διασυνδέσεων θα είναι μεγαλύτερο καθώς και λόγο δυσκολίας δρομολόγησης ίσως και πιο περίπλοκο.
+Στους αθροιστές Jackson σημειώνεται αρκετά μεγαλύτερο πλήθος κόμβων σε σχέση με τους υπόλοιπους δύο σχεδιασμούς. Συνεπάγεται, λοιπόν, πως και το πλήθος των διασυνδέσεων θα είναι μεγαλύτερο καθώς και λόγω δυσκολίας δρομολόγησης ίσως και πιο περίπλοκο.
 
 
 
 
 \subsection{Συμπεράσματα}
 
-Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσει. Εφόσον στις μη-τοπογραφικές μετρήσεις το αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλων φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
+Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσεις. Εφόσον στις μη-τοπογραφικές μετρήσεις το αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλων φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
 
