--- a/main.tex
+++ b/main.tex
@@ -179,8 +179,8 @@ sorting=ynt
 \renewcommand{\tablename}{Πίνακας}
 % \renewcommand{\bibname}{Βιβλιογραφία}
 % \newcommand{\listequationsname}{\Large{List of Equations}}
-\renewcommand{\listfigurename}{Λίστα των Εικόνων} 
-\renewcommand{\listtablename}{Λίστα των Πινάκων}
+\renewcommand{\listfigurename}{Λίστα Εικόνων} 
+\renewcommand{\listtablename}{Λίστα Πινάκων}
 % \renewcommand{\appendixname}{Παραρτήματα}
 
 %-----------------------------------------------------------------------
