--- a/modAdder.tex
+++ b/modAdder.tex
@@ -26,12 +26,12 @@
     (A+B)\, mod\; 2^n + 1   , & A+B \geq 2^n
 \end{cases}
 \end{equation}
-Ο ορισμός αυτός μαθηματικά έχει ένα λάθος το οποίο όμως, λαμβάνοντας μία 
+Ο ορισμός αυτός μαθηματικά έχει ένα λάθος, το οποίο όμως λαμβάνοντας μία 
 παραδοχή, θα εξαλειφθεί.
-Για παράδειγμα έστω πως $n=3$ άρα και $2^n-1 = 7$, όπου n το πλήθος των δυαδικών ψηφίων
+Για παράδειγμα, έστω πως $n=3$ άρα και $2^n-1 = 7$, όπου n το πλήθος των δυαδικών ψηφίων
 που έχει κάθε αριθμός εισόδου. Για τον υπολογισμό του υπολοίπου, όπως προαναφέρθηκε,
 διαιρείται ο αριθμός εισόδου με το 7 και το υπόλοιπο είναι το αποτέλεσμα. Με είσοδο 
-τον αριθμό 3 υπολογίζεται $3/7 = 0$ και υπόλοιπο 3. Παρακάτω παρουσιάζονται μια σειρά από 
+τον αριθμό 3 υπολογίζεται $3/7 = 0$ και υπόλοιπο 3. Παρακάτω παρουσιάζεται μια σειρά από 
 παραδείγματα.
 \begin{equation*}
     \begin{split}
@@ -80,16 +80,16 @@
     \label{fig:2^n-1_carry_select_adder}
 \end{figure}
 Πρέπει να σημειωθεί πως και στις δύο περιπτώσεις απαιτείται η υλοποίηση δύο αθροιστών 
-με αποτέλεσμα αυξάνεται το εμβαδόν του αθροιστή στο διπλάσιο συγκριτικά με έναν απλό αθροιστή.
+με αποτέλεσμα να αυξάνεται το εμβαδόν του αθροιστή στο διπλάσιο συγκριτικά με έναν απλό αθροιστή.
 Ένας ακόμα παράγοντας σε αυτές τις αρχιτεκτονικές είναι η δομή των επιμέρους αθροιστών. 
 Η επίτευξη υψηλών ταχυτήτων είναι δυνατή επιλέγοντας μια παράλληλη προθεματική δομή 
-για τον σχεδιασμό των αθροιστών που συντελούν το αθροιστή υπολοίπου, θυσιάζοντας αρκετά
+για τον σχεδιασμό των αθροιστών που συντελούν τον αθροιστή υπολοίπου, θυσιάζοντας αρκετά
 τον χώρο και την κατανάλωση.
 
 Μία καθιερωμένη υλοποίηση των αθροιστών αυτής της κατηγορίας χρησιμοποιεί έναν τυπικό αθροιστή
 συνδέοντας το κρατούμενο εξόδου στο κρατούμενο εισόδου δημιουργώντας έναν αθροιστή κυκλικού
 κρατουμένου (end-round carry). Αυτή η τοπολογία μετατρέπει τον αθροιστή σε ένα ασύγχρονο 
-ακολουθιακό κύκλωμα, του οποίου η κατάσταση εξαρτάται από προηγούμενες και από την 
+ακολουθιακό κύκλωμα, του οποίου η κατάσταση εξαρτάται από προηγούμενες καταστάσεις και από την 
 καθυστέρηση της διάδοσης κρατουμένων. Εξαιτίας αυτής της συμπεριφοράς δημιουργούνται
 πρακτικά προβλήματα χρονισμού με αποτέλεσμα την επιπλέον αύξηση του χρόνου καθυστέρησης.
 Το πρόβλημα αυτό παρατηρείται στις περιπτώσεις που οι δυαδικοί αριθμοί εισόδου 
@@ -163,7 +163,7 @@ $c'_{n-1} = G'_{n-1}$
 Στην εικόνα \ref{fig:2^n-1_simple_Prefix_structure} παρουσιάζεται η βασική δομή των αθροιστών υπολοίπου υλοποιημένη με προθεματικό αθροιστή σύμφωνα με τις εξισώσεις που αναπτύχθηκαν.
 Ένας σχεδιασμός σαν τον παραπάνω, εκτός από το γεγονός του επιπλέον επιπέδου,
 έχει και το μειονέκτημα στο ότι το κρατούμενο εξόδου του πρώτου τμήματος οδηγεί 
-n κόμβους του τελευταίου επιπέδου, όπως εκφράζεται και την εξίσωση \ref{eq:2^n-1_G'_eguation}.
+n κόμβους του τελευταίου επιπέδου, όπως εκφράζεται και από την εξίσωση \ref{eq:2^n-1_G'_eguation}.
 
 
 
