--- a/Introduction.tex
+++ b/Introduction.tex
@@ -5,7 +5,7 @@
 
 Η πρόσθεση αποτελεί θεμελιώδης πράξη των ψηφιακών συστημάτων. Επίσης είναι η πιο συχνά εκτελούμενη πράξη από τις επεξεργαστικές μονάδες. Συμπεραίνετε λοιπόν η μεγάλη κρισιμότητα της ορθής λειτουργίας της αλλά και της ταχύτητας υπολογισμού. 
 
-Ένα από τα μεγαλύτερα εμπόδια, όσο αφορά την ταχύτητα υπολογισμού του αθροίσματος, είναι ο χρόνος υπολογισμού των ενδιάμεσων κρατουμένων αλλά και του κρατούμενου εξόδου. Μία από τις μεγαλύτερες καινοτομίες που παρουσιάστηκαν με σκοπό την ελαχιστοποίηση των χρονικών αυτών διαστημάτων, είναι οι αρχιτεκτονικές πρόβλεψης κρατουμένων ή Carry Look Ahead (CLA). Η δομή των CLA αθροιστών απασχόλησε αρκετά την επιστημονική κοινότητα, με αρκετές προτάσεις υλοποίησης, η κάθε μία με διαφορετικές απαιτήσεις πόρων ανάλογα την εφαρμογή.
+Ένα από τα μεγαλύτερα εμπόδια, όσον αφορά την ταχύτητα υπολογισμού του αθροίσματος, είναι ο χρόνος υπολογισμού των ενδιάμεσων κρατουμένων αλλά και του κρατούμενου εξόδου. Μία από τις μεγαλύτερες καινοτομίες που παρουσιάστηκαν με σκοπό την ελαχιστοποίηση των χρονικών αυτών διαστημάτων, είναι οι αρχιτεκτονικές προβλέψεις κρατουμένων ή Carry Look Ahead (CLA). Η δομή των CLA αθροιστών απασχόλησε αρκετά την επιστημονική κοινότητα, με αρκετές προτάσεις υλοποίησης, η κάθε μία με διαφορετικές απαιτήσεις πόρων ανάλογα την εφαρμογή.
 
 
 Στην παρούσα διπλωματική εργασία θα αναλυθούν οι αθροιστές και συγκεκριμένα μια υποομάδα αυτών , οι αθροιστές υπολοίπου $2^n-1$. Η ομάδα αυτών των αθροιστών είναι χρήσιμη στα Συστήματα Αριθμητικών Υπολειμμάτων ή Residue Number Systems (RNS), στα Συστήματα Ανθεκτικά σε Σφάλματα ή Fault-Tolerant Systems, στην ανίχνευση σφάλματος στα συστήματα δικτύου καθώς και στις αριθμητικές πράξεις κινητής υποδιαστολής. Οι αθροιστές υπολοίπου δεν διαφέρουν πολύ από τους απλούς αθροιστές. Αν όχι όλες, τουλάχιστον οι περισσότερες κατηγορίες αθροιστών συμμερίζονται τον υπολογισμό των κρατουμένων στο κρίσιμο μονοπάτι τους, όπως και οι αθροιστές υπολοίπου.
@@ -15,6 +15,6 @@
 συνέβαλαν στη πειραματική διαδικασία σχεδιασμού ενός αθροιστή υπολοίπου. Στην συνέχεια 
 θα γίνει μία αναλυτική αναφορά στους αθροιστές υπολοίπου $2^n-1$, καθώς και αρχιτεκτονικές
 βελτιστοποίησης τους. Τέλος, αναπτύσσεται ένας αθροιστής υπολοίπου, συνδυάζοντας διάφορες 
-τεχνικές και σχεδιασμούς που έχουν αναφερθεί. Οι αθροιστές που θα αναπτυχθούν, εφόσον ελεγχθούν επαρκώς, θα συγκριθούν με παρελθοντικές υλοποιήσεις όσο αφορά το χρόνο, χώρο και κατανάλωση ενέργειας.
+τεχνικές και σχεδιασμούς που έχουν αναφερθεί. Οι αθροιστές που θα αναπτυχθούν, εφόσον ελεγχθούν επαρκώς, θα συγκριθούν με παρελθοντικές υλοποιήσεις όσον αφορά το χρόνο, χώρο και την κατανάλωση ενέργειας.
 
 Η δομή του συγκεκριμένου εγγράφου είναι τέτοια ώστε να υπάρχει μια λογική σύνδεση μεταξύ των ενοτήτων. Μολονότι στην παρούσα αναφορά αναλύονται θεμελιώδεις έννοιες, η γνώση σχεδίασης ψηφιακών κυκλωμάτων, λογικών πυλών και συναρτήσεων, καθώς και δυαδικής αναπαράστασης θεωρείται προαπαιτούμενη για τον αναγνώστη ώστε να είναι σε θέση να συλλάβει κάθε πληροφορία. Στα παρακάτω κεφάλαια δίνεται ιδιαίτερη προσοχή στα θέματα που συνέβαλαν στο σχεδιασμό του τελικού αθροιστή, περιορίζοντας έτσι τον μεγάλο όγκο πληροφορίας. Κάθε τεχνική και αρχιτεκτονική παρουσιάζεται με συγκεκριμένη σειρά και ανάλυση δίνοντας στον αναγνώστη την δυνατότητα πλήρης κατανόησης, αναπαραγωγής καθώς και βελτίωσης των αθροιστών που υλοποιήθηκαν.
