Updates from ShareLaTeX

--- a/BinaryAddition.tex
+++ b/BinaryAddition.tex
@@ -65,8 +65,7 @@
 \end{equation}\\
 
 
-
-Από τον ημιαθροιστή δομείται ο πλήρης αθροιστής ή Full-Adder (FA) με τρεις εισόδους x, y, z , δυο εξόδους sum και $c_{out}$ και λειτουργία αντίστοιχη του FA με την διαφορά πως ο FA προσθέτει τρία δυαδικά ψηφιά \\
+Παρόμοια με τον ημιαθροιστή λειτουργεί ο πλήρης αθροιστής ή Full-Adder (FA), προσθέτοντας τρία δυαδικά ψηφία. Στον πίνακα \ref{table:2} δίνεται η περιγραφή του στοιχείου αυτού. Στην συνέχεια θα χρησιμοποιηθεί αυτή η μονάδα για την δημιουργία μίας αλυσίδας από FA για την πρόσθεση δυαδικών αριθμών.
 \begin{multicols}{2}
 \hfill
 \begin{table}[H]
