Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -303,7 +303,7 @@ $G_{1:6}$ υπονοείται η παρακάτω έκφραση :
 \begin{figure}[H]
 \centering
 % \includegraphics[width=\textwidth]{2^8-1_new_structure.png}
-\includegraphics[width=height=6cm,width=9cm]{2^8-1_new_structure.png}
+\includegraphics[height=7cm,width=7cm]{2^8-1_new_structure.png}
 \caption{Παράλληλος προθεματικός αθροιστής υπολοίπου $2^8-1$}
 \label{fig:2^8-1_new_structure}
 \end{figure}
