--- a/Results.tex
+++ b/Results.tex
@@ -925,10 +925,9 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \begin{figure}[H]
 \begin{center}
-\begin{tikzpicture}[scale=0.6]
+\begin{tikzpicture}[scale=0.67]
 
 \begin{axis}[
-    title={Γράφημα καθυστέρησης},
     xlabel={Μήκος εισόδου (bits)},
     ylabel={Χρονική καθυστέρηση (ns)},
     xmin=0, xmax=70,
@@ -1152,7 +1151,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \end{figure}
 
 
-Στους αθροιστές Jackson σημειώνεται αρκετά μεγαλύτερο πλήθος κόμβων σε σχέση με τους υπόλοιπους δύο σχεδιασμούς. Συνεπάγεται, λοιπόν, πως και το πλήθος των διασυνδέσεων θα είναι μεγαλύτερο καθώς και λόγω δυσκολίας δρομολόγησης ίσως και πιο περίπλοκο.
+Οι αθροιστές Jackson αποτελούνται από αρκετά μεγαλύτερο πλήθος κόμβων σε σχέση με τους υπόλοιπους δύο σχεδιασμούς. Συνεπάγεται, λοιπόν, πως και το πλήθος των διασυνδέσεων θα είναι μεγαλύτερο καθώς και λόγω δυσκολίας δρομολόγησης ίσως και πιο περίπλοκο.
 
 
 
