--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[LO]{\leftmark}
-\fancyfoot[C,CO]{Page \thepage\ from \pageref{LastPage}}
+\fancyfoot[C,CO]{Σελίδα \thepage\ από \pageref{LastPage}}
 \setlength{\headheight}{14pt}
 
 
