Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -12,10 +12,10 @@
 
 % FONT THEMES
 % ----------------------------------
-\usepackage{kerkis}
-% ----------------------------------
-\usepackage{kmath} % The order of the packages matters; kmath changes the default text font
-\usepackage[T1]{fontenc}
+% \usepackage{kerkis}
+% % ----------------------------------
+% \usepackage{kmath} % The order of the packages matters; kmath changes the default text font
+% \usepackage[T1]{fontenc}
 % ----------------------------------
 
 
@@ -69,7 +69,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[LO]{\leftmark}
-\fancyfoot[C,CO]{Page \thepage\ from \pageref{LastPage}}
+\fancyfoot[C,CO]{Σελίδα \thepage\ από \pageref{LastPage}}
 \setlength{\headheight}{14pt}
 
 
