non word-breaking

--- a/AddersFamily.tex
+++ b/AddersFamily.tex
@@ -19,7 +19,7 @@
 
 % , αυτά που παράγουν κρατούμενο ανεξάρτητο του κρατουμένου εισόδου του αντίστοιχου FA και καλούνται generate και αυτά που διαδίδουν κρατούμενο και ονομάζονται propagate. Σημειώνεται πως τα σήματα generate και propagate αναφέρονται στα ζεύγη των δυαδικών ψηφίων των αριθμών εισόδου, δηλαδή $(A_i,B_i)$. Οι εξισώσεις είναι αντίστοιχα:
 \begin{equation}
-    p_i &= A_i \oplus B_i 
+    p_i = A_i \oplus B_i 
 \end{equation}
 
 %-----------------
