--- a/main.tex
+++ b/main.tex
@@ -12,10 +12,10 @@
 
 % FONT THEMES
 % ----------------------------------
-% \usepackage{kerkis}
-% % ----------------------------------
-% \usepackage{kmath} % The order of the packages matters; kmath changes the default text font
-% \usepackage[T1]{fontenc}
+\usepackage{kerkis}
+% ----------------------------------
+\usepackage{kmath} % The order of the packages matters; kmath changes the default text font
+\usepackage[LGR,T1]{fontenc}
 % ----------------------------------
 
 
@@ -163,8 +163,8 @@ sorting=ynt
 %     description={Fan-out of 4 is a process-dependent delay metric used in digital CMOS technologies}
 % }
 
-
-
+% PREVENT WORDBREAKING AT THE END OF LINE
+\usepackage[none]{hyphenat}
 
 %-----------------------------------------------------------------------
 %-----------------------------------------------------------------------
